学校主页功能测试

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,13 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.5</version>
     </dependency>
+    <!--引入lombok（减少get、set方法）-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.4</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
